--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- p5 Bibliotheken-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+    <!-- App CSS-->
+    <link href="css/main.css" rel="stylesheet">
 
-    <!-- ml5 Bibliotheken-->
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <!-- d3.js -->
+    <script type="text/javascript" src="https://d3js.org/d3.v7.min.js"></script>
 
     <!-- plotly -->
     <script src="https://cdn.plot.ly/plotly-2.9.0.min.js"></script>
 
-    <!-- Eigenes CSS und JavaScript -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Include Scrips for the App. -->
+    <script src="scripts/Utils.js"></script>
+    <script src="scripts/LIFNeuron.js"></script>
+    <script src="scripts/DrawGraph2.js"></script>
+    <script src="scripts/Beep.js"></script>
+
 </head>
 
 <body>
+
 <div class="container">
     <!-- Seitenheader -->
     <nav class="navbar navbar-light bg-light">
@@ -61,11 +65,74 @@
     <div class="tab-content justify-content-center d-flex">
         <!-- Lösung -->
         <div class="tab-pane fade show active" id="lösung">
-            <h5>
-                <strong>
-                    Lösung
-                </strong>
-            </h5>
+            <div class="row">
+                <div class="row" id="info-text">
+                    <p class="fs-5 output-text">Nachdem das Netz geladen worden ist, können Bilder per drag and drop auf
+                        die grüne Ablagefläche gezogen werden, um sie zu klassifizieren. Die acht Beispielbilder sind
+                        Beispiele für gute und weniger gute Klassifikationen.
+                    </p>
+                </div>
+
+                <div class="col">
+                    <div>
+                        <div class="simulation-config">
+                            <label class="form-label" for="range-tgesamt">Zeitdauer der Simulation (ms)</label>
+                            <input class="form-range" id="range-tgesamt" type="range" min="0" max="500" step="0.01"
+                                   value="1"
+                                   onchange="dummy()">
+                            <p id="range-tgesamt-value" class="range-value-string">Aktueller Wert: </p>
+                        </div>
+
+                        <div class="simulation-config">
+                            <label class="form-label" for="range-dt">Länge eines Zeitschrittes für die Berechnung
+                                (ms)</label>
+                            <input class="form-range" id="range-dt" type="range" min="1" max="5" step="1"
+                                   value="1"
+                                   onchange="dummy()">
+                            <p id="range-dt-value" class="range-value-string">Aktueller Wert: </p>
+                        </div>
+
+                        <div class="simulation-config">
+                            <label class="form-label" for="range-timpulse">Zeitdauer eines Impulses (ms)</label>
+                            <input class="form-range" id="range-timpulse" type="range" min="0" max="500" step="0.01"
+                                   value="1"
+                                   onchange="dummy()">
+                            <p id="range-timpulse-value" class="range-value-string">Aktueller Wert: </p>
+                        </div>
+
+                        <div class="simulation-config">
+                            <label class="form-label" for="range-imax">Höhe des Stroms (mA)</label>
+                            <input class="form-range" id="range-imax" type="range" min="0" max="3" step="0.001"
+                                   value="1"
+                                   onchange="dummy()">
+                            <p id="range-imax-value" class="range-value-string">Aktueller Wert: </p>
+                        </div>
+
+                        <div class="simulation-config">
+                            <label class="form-label" for="current-type">Wählen sie die Stromart:</label>
+                            <select class="form-select" id="current-type" aria-label="Default select example">
+                                <option selected value="1">Impuls</option>
+                                <option value="2">Zufall</option>
+                            </select>
+                        </div>
+
+                        <div id="simulation-button-bar" class="simulation-config">
+                            <button class="btn btn-outline-primary" onclick="setIntialValue()">pulseTest</button>
+                            <button class="btn btn-outline-primary" onclick="RandomTest()">RandomTest</button>
+                            <button class="btn btn-outline-primary" onclick="dynamicImpulse()">DynamicTest</button>
+                        </div>
+                    </div>
+
+
+                    <div id="Diagramm1"></div>
+
+                </div>
+                <div class="col">
+
+                    <p>Simulation mit einem Netzwerd</p>
+
+                </div>
+            </div>
         </div>
 
         <!-- Dokumentation -->
@@ -94,8 +161,9 @@
         crossorigin="anonymous"></script>
 
 <!-- Eigene JavaScripte -->
-<script src="scripts/upload.js"></script>
-<script src="scripts/ml.js"></script>
+<script src="scripts/main.js"></script>
+<script src="scripts/RangeValues.js"></script>
+
 
 </body>
 
