Klasse SynapticLIF und Connection eingeführt

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="scripts/DynamicImpulseTrain.js"></script>
     <script src="scripts/DynamicVoltageTrain.js"></script>
     <script src="scripts/LIFNeuron.js"></script>
+    <script src="scripts/SynapticLIFNeuron.js"></script>
     <script src="scripts/DrawGraph2.js"></script>
     <script src="scripts/Beep.js"></script>
 
