--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +28,8 @@
     <script src="scripts/DynamicVoltageTrain.js"></script>
     <script src="scripts/LIFNeuron.js"></script>
     <script src="scripts/SynapticLIFNeuron.js"></script>
+    <script src="scripts/Connection.js"></script>
+    <script src="scripts/Network.js"></script>
     <script src="scripts/DrawGraph2.js"></script>
     <script src="scripts/Beep.js"></script>
 
@@ -101,7 +104,7 @@
                                 ms)</label>
                             <input class="form-range" id="range-tgesamt" type="range" min="0" max="500" step="1"
                                    value="200"
-                                   onchange="dummy()">
+                                   onchange="">
                             <p id="range-tgesamt-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -110,7 +113,7 @@
                                 (1 bis 5 ms)</label>
                             <input class="form-range" id="range-dt" type="range" min="1" max="5" step="1"
                                    value="1"
-                                   onchange="runSimulation()">
+                                   onchange="">
                             <p id="range-dt-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -119,7 +122,7 @@
                                 ms)</label>
                             <input class="form-range" id="range-timpulse" type="range" min="0" max="500" step="1"
                                    value="50"
-                                   onchange="dummy()">
+                                   onchange="">
                             <p id="range-timpulse-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -127,7 +130,7 @@
                             <label class="form-label" for="range-imax">Höhe des Stroms (0 bis 3 mA)</label>
                             <input class="form-range" id="range-imax" type="range" min="0" max="3" step="0.001"
                                    value="1"
-                                   onchange="runSimulation()">
+                                   onchange="">
                             <p id="range-imax-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -155,10 +158,13 @@
                         <label class="form-label" for="range-rmax">Widerstand zum nächsten Neuron (0 bis 2 Ohm)</label>
                         <input class="form-range" id="range-rmax" type="range" min="0" max="3" step="0.001"
                                value="1"
-                               onchange="runSimulation()">
+                               onchange="">
                         <p id="range-rmax-value" class="range-value-string">Aktueller Wert: </p>
                     </div>
                     <div id="Diagramm2"></div>
+                    <div id="Diagramm3">
+                        <svg id="svg" style="background-color: antiquewhite;" width="100%" height="50%"></svg>
+                    </div>
                 </div>
             </div>
         </div>
@@ -247,6 +253,7 @@
         crossorigin="anonymous"></script>
 
 <!-- Eigene JavaScripte -->
+<script src="scripts/NetworkGraph.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/RangeValues.js"></script>
 
