--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
                     <div class="simulation-config">
                         <label class="form-label" for="range-rmax">Widerstand zum nächsten Neuron (0 bis 2 Ohm)</label>
                         <input class="form-range" id="range-rmax" type="range" min="0" max="3" step="0.001"
-                               value="1"
-                               onchange="">
+                               value="1">
                         <p id="range-rmax-value" class="range-value-string">Aktueller Wert: </p>
                     </div>
                     <div id="Diagramm2"></div>
