--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
                         <div class="simulation-config">
                             <label class="form-label" for="range-countNeuronen">Anzahl der Neuronen (0 bis 30)</label>
                             <input class="form-range" id="range-countNeuronen" type="range" min="0" max="30" step="1"
-                                   value="10"
-                                   onchange="">
+                                   value="10">
                             <p id="range-countNeuronen-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -206,8 +205,7 @@
                                 (0.001 bis 3 Ohm)</label>
                             <input class="form-range" id="range-widerstandMin" type="range" min="0.001" max="3"
                                    step="0.001"
-                                   value="0.5"
-                                   onchange="">
+                                   value="0.3">
                             <p id="range-widerstandMin-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -216,8 +214,7 @@
                                 (0.001 bis 3 Ohm)</label>
                             <input class="form-range" id="range-widerstandMax" type="range" min="0.001" max="3"
                                    step="0.001"
-                                   value="0.5"
-                                   onchange="">
+                                   value="0.5">
                             <p id="range-widerstandMax-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
@@ -225,32 +222,29 @@
                             <label class="form-label" for="range-tNetzImpulse">Zeitdauer eines Impulses (0 bis 500
                                 ms)</label>
                             <input class="form-range" id="range-tNetzImpulse" type="range" min="0" max="500" step="1"
-                                   value="50"
-                                   onchange="">
+                                   value="50">
                             <p id="range-tNetzImpulse-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
                         <div class="simulation-config">
                             <label class="form-label" for="range-iNetzMin">Minimale Höhe des Stroms (0 bis 3 mA)</label>
                             <input class="form-range" id="range-iNetzMin" type="range" min="0" max="3" step="0.001"
-                                   value="1"
-                                   onchange="">
+                                   value="1">
                             <p id="range-iNetzMin-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
                         <div class="simulation-config">
                             <label class="form-label" for="range-iNetzMax">Maximale Höhe des Stroms (0 bis 3 mA)</label>
                             <input class="form-range" id="range-iNetzMax" type="range" min="0" max="3" step="0.001"
-                                   value="1"
-                                   onchange="">
+                                   value="2.8">
                             <p id="range-iNetzMax-value" class="range-value-string">Aktueller Wert: </p>
                         </div>
 
                         <div class="simulation-config">
                             <label class="form-label" for="netzCurrent-type">Wählen sie die Stromart:</label>
                             <select class="form-select" id="netzCurrent-type" aria-label="Default select example">
-                                <option selected>Bitte wählen sie den Typ aus:</option>
-                                <option value="1">Impuls</option>
+                                <option>Bitte wählen sie den Typ aus:</option>
+                                <option selected value="1">Impuls</option>
                                 <option value="2">Zufall</option>
                             </select>
                         </div>
@@ -357,8 +351,9 @@
         crossorigin="anonymous"></script>
 
 <!-- Eigene JavaScripte -->
-<script src="scripts/NetworkGraph.js"></script>
+
 <script src="scripts/RangeValues.js"></script>
+<script src="scripts/NetworkGraph.js"></script>
 <script src="scripts/main.js"></script>
 
 </body>
