Inhalt und Oberflächentexte fertig gestellt 2.

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     </p>
                     <p class="fs-5 output-text">
                         Auf der rechten Seite werden im oberen Graph der Strom, der Spannungsverlauf sowie die Spikes
-                        des
-                        Neurons angezeigt. Die Dauer des Spikes richtet sich hierbei vereinfacht nach der Dauer der
-                        Ruhezeit.
+                        des Neurons angezeigt. Die Dauer des Spikes richtet sich hierbei vereinfacht nach der Dauer
+                        der Ruhezeit. Es werden weiterhin zur Vereinfachung nicht die Zeitintervalle zwischen den
+                        einzelnen Spikes oder die vorherigen Spikes berücksichtigt.
                     </p>
                     <p class="fs-5 output-text">
                         Am Ausgang des ersten Neurons befindet sich ein weiters Neuron in Reihe. An íhm liegt ein
